--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -1,4 +1,7 @@
-/* Webfont: Lato-Regular */@font-face {
+@import '../../assets/styles/sizing.scss';
+
+// Fonts
+@font-face {
     font-family: 'lato-regular';
     src: url('../../assets/fonts/Lato-Regular.woff2') format('woff2'), /* Modern Browsers */
          url('../../assets/fonts/Lato-Regular.woff') format('woff'); /* Modern Browsers */
@@ -7,7 +10,7 @@
     text-rendering: optimizeLegibility;
 }
 
-/* Webfont: Lato-Thin */@font-face {
+@font-face {
     font-family: 'lato-thin';
     src: url('../../assets/fonts/Lato-Thin.woff2') format('woff2'), /* Modern Browsers */
          url('../../assets/fonts/Lato-Thin.woff') format('woff'); /* Modern Browsers */
@@ -16,13 +19,18 @@
     text-rendering: optimizeLegibility;
 }
 
-/* Webfont: Lato-Hairline */@font-face {
+@font-face {
     font-family: 'lato-hairline';
     src: url('../../assets/fonts/Lato-Hairline.woff2') format('woff2'), /* Modern Browsers */
          url('../../assets/fonts/Lato-Hairline.woff') format('woff'); /* Modern Browsers */
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
+}
+
+// Global
+* {
+  box-sizing: border-box;
 }
 
 html {
@@ -37,10 +45,25 @@ html, body {
   height: 100vh;
 }
 
+// TODO -- move the above to a discrete app level stylesheet
+
 main {
-  font-size: 1.2em;
+  display: flex;
   font-family: 'lato-hairline', 'Helvetica Neue', sans-serif;
+
+  justify-content: center;
+  align-items: center;
 
   width: 100%;
   height: 100%;
+}
+
+.nucleus {
+  border: 1px solid black;
+}
+
+.nucleus span {
+  display: block;
+  font-size: $large;
+  padding: 0.2em;
 }
