--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -49,13 +49,21 @@ html, body {
 
 main {
   display: flex;
+  flex: 1;
+  flex-direction: column;
   font-family: 'lato-hairline', 'Helvetica Neue', sans-serif;
-
-  justify-content: center;
-  align-items: center;
 
   width: 100%;
   height: 100%;
+}
+
+section {
+  flex: 1;
+
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
 }
 
 .nucleus {
